-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 12.0.0
-
None
-
-
d1ac2fe45 (12.0)
When using at least two c++ documents split side by side and editing in the right most document, the "Refactor" submenu in the context menu always opens to the right, although there is no space for displaying the submenu. So I am forced to open the document in the left side, to be able to use the "Refactor" submenu correctly.
| For Gerrit Dashboard: QTCREATORBUG-30010 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 523342,1 | CppEditor: Add Refactor menu placeholder item unconditionally | 12.0 | qt-creator/qt-creator | Status: ABANDONED | -1 | 0 |
| 523360,3 | Adjust position of refactor submenu | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |