Adjust position of refactor submenu

Fixes: QTCREATORBUG-30010
Change-Id: Idf4ce4e3bc4d0af3d40460c8f2e27f52c90f2454
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>